--- a/blog_frontend/src/assets/styles.css
+++ b/blog_frontend/src/assets/styles.css
@@ -41,7 +41,7 @@ p {
     font-weight: 100;
     line-height: 20px;
     letter-spacing: 0.5px;
-    margin: 20px 0 30px;
+    margin: 5px 0px 5px 0px;
 }
 
 span {
@@ -433,4 +433,8 @@ hr {
 .view-description {
     font-size: 12pt;
     margin-bottom: 5px;
+}
+
+.back{
+    color: #333;
 }
